# picurate

./: .gitignore  CLAUDE.md  LICENSE  README.md  install_launcher.sh  installer.py  main.py  photo-organizer-plan.md  picurate-addendum.md  picurate.desktop  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  uninstall.bat  uninstall.sh
core/: clustering.py  collections.py  contact_sheet.py  duplicates.py  edits.py  exif.py  export.py  faces.py  firstrun.py  gallery.py  grouping.py  hashing.py  logger.py  metadata.py  paths.py  people.py  places.py  quality.py  query.py  recovery.py  reset.py  scanner.py  settings.py  similar.py  stats.py  tags.py  thumbnails.py  topics.py  worker.py  writeback.py
core/db/: catalog.py  schema.py
core/importers/: base.py  engine.py  folder.py  picasa.py  xmp.py
tests/: conftest.py  create_fixtures.py  test_addendum.py  test_audit_fixes.py  test_edits.py  test_stage0.py  test_stage1.py  test_stage10.py  test_stage11.py  test_stage2.py  test_stage3.py  test_stage4.py  test_stage5.py  test_stage6.py  test_stage7.py  test_stage8.py  test_stage9.py  test_ui_smoke.py
tests/fixtures/: .picasa.ini  photo.xmp
ui/: collectiondialog.py  cullview.py  edit_panel.py  exportdialog.py  face_gallery.py  face_review.py  filterbar.py  firstrun_dialog.py  groupview.py  health_dialog.py  help_dialog.py  importdialog.py  loupe.py  mainwindow.py  mapview.py  propspanel.py  settings_dialog.py  sidebar.py  thumbgrid.py  unassigned_faces.py
