[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "picurate"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.6",
    "platformdirs>=4.0",
    "Pillow>=10.0",
    "pillow-heif>=0.13",
    "rawpy>=0.19",
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
