[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "picurate"
version = "0.1.0"
description = "Local, private desktop photo organizer"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["photo", "organizer", "desktop", "picasa"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics :: Viewers",
]
dependencies = [
    "PySide6>=6.6",
    "platformdirs>=4.0",
    "Pillow>=10.0",
    "pillow-heif>=0.13",
    "rawpy>=0.19",
    "numpy>=1.26",
    "onnxruntime>=1.17",
    "imagehash>=4.3",
    "reverse_geocoder>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
]
ml = [
    # InsightFace and open-clip require torch; install separately
    # "insightface>=0.7",
    # "open-clip-torch>=2.20",
]

[project.scripts]
picurate = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
